[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Home/HomeCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Home/HomeScene.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Home/HomeBoxEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Home/HomeAntEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/NotoSansHans-Medium.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1280, 360 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0.431373, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="HomeScene" type="Node2D"]
script = ExtResource( 2 )
box_effect = ExtResource( 3 )
ant_effect = ExtResource( 4 )

[node name="HomeCore" parent="." instance=ExtResource( 1 )]

[node name="BGContainer" type="Position2D" parent="."]
position = Vector2( -1.88776, 0 )

[node name="PlayerPos" type="Position2D" parent="."]
position = Vector2( 1088, 566 )

[node name="AntHomePos" type="Position2D" parent="."]
position = Vector2( 888, 564 )

[node name="BoxPos" type="Position2D" parent="."]
position = Vector2( 293.668, 557.37 )

[node name="BoxSpawnPos" type="Position2D" parent="."]
position = Vector2( 272.692, -28.4679 )

[node name="AntPos" type="Position2D" parent="."]
position = Vector2( 888, 564 )

[node name="EffectPos" type="Position2D" parent="."]

[node name="BoxActiveZone" type="Area2D" parent="."]
position = Vector2( 616.696, 598.008 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoxActiveZone"]
shape = SubResource( 1 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerExp" type="Label" parent="HUD"]
margin_left = 900.699
margin_top = 26.727
margin_right = 947.699
margin_bottom = 46.727
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerGold" type="Label" parent="HUD"]
margin_left = 901.59
margin_top = 58.7993
margin_right = 948.59
margin_bottom = 78.7993
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPart" type="Label" parent="HUD"]
visible = false
margin_left = 902.297
margin_top = 90.6191
margin_right = 949.297
margin_bottom = 110.619
text = "Hello"

[node name="GachaCD" type="Label" parent="HUD"]
margin_left = 1045.36
margin_top = 205.492
margin_right = 1092.36
margin_bottom = 225.492
text = "Hello"

[node name="Battle" type="Button" parent="HUD"]
margin_left = 1063.73
margin_top = 611.157
margin_right = 1262.73
margin_bottom = 707.156
custom_fonts/font = SubResource( 2 )
text = "Battle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntBornRatio" type="Label" parent="HUD"]
margin_left = 868.161
margin_top = 518.27
margin_right = 908.161
margin_bottom = 538.27
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReqSupply" type="Button" parent="HUD"]
margin_left = 911.967
margin_top = 151.871
margin_right = 1061.97
margin_bottom = 195.871
text = "Require Supply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReqBox" type="Button" parent="HUD"]
margin_left = 1079.46
margin_top = 151.871
margin_right = 1218.46
margin_bottom = 195.871
text = "Require Box"

[node name="EatAnt" type="Button" parent="HUD"]
margin_left = 788.637
margin_top = 606.163
margin_right = 990.637
margin_bottom = 674.163
text = "Sacrifice Ant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradePanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 247.487
margin_top = -32.5269
margin_right = 247.487
margin_bottom = -32.5269
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="UpgradePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 95.5525
margin_top = 56.4984
margin_right = 618.552
margin_bottom = 638.498
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttrLine_HP" type="Control" parent="UpgradePanel/BG"]
margin_left = 81.8295
margin_top = 121.719
margin_right = 121.829
margin_bottom = 161.719
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/AttrLine_HP"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "HP"

[node name="Value" type="Label" parent="UpgradePanel/BG/AttrLine_HP"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_HP" type="Button" parent="UpgradePanel/BG/AttrLine_HP"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="AttrLine_ATK" type="Control" parent="UpgradePanel/BG"]
margin_left = 82.5786
margin_top = 161.202
margin_right = 122.579
margin_bottom = 201.202
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/AttrLine_ATK"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "ATK"

[node name="Value" type="Label" parent="UpgradePanel/BG/AttrLine_ATK"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_ATK" type="Button" parent="UpgradePanel/BG/AttrLine_ATK"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="AttrLine_SPD" type="Control" parent="UpgradePanel/BG"]
margin_left = 82.3958
margin_top = 199.572
margin_right = 122.396
margin_bottom = 239.572
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/AttrLine_SPD"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "SPD"

[node name="Value" type="Label" parent="UpgradePanel/BG/AttrLine_SPD"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_SPD" type="Button" parent="UpgradePanel/BG/AttrLine_SPD"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="AttrLine_SKL" type="Control" parent="UpgradePanel/BG"]
margin_left = 81.6467
margin_top = 238.366
margin_right = 121.647
margin_bottom = 278.366
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/AttrLine_SKL"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "SKL"

[node name="Value" type="Label" parent="UpgradePanel/BG/AttrLine_SKL"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_SKL" type="Button" parent="UpgradePanel/BG/AttrLine_SKL"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="GunLine_THR" type="Control" parent="UpgradePanel/BG"]
margin_left = 347.527
margin_top = 125.351
margin_right = 387.527
margin_bottom = 165.351
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/GunLine_THR"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "THR"

[node name="Value" type="Label" parent="UpgradePanel/BG/GunLine_THR"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_THR" type="Button" parent="UpgradePanel/BG/GunLine_THR"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="GunLine_DBL" type="Control" parent="UpgradePanel/BG"]
margin_left = 348.497
margin_top = 162.033
margin_right = 388.497
margin_bottom = 202.033
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/GunLine_DBL"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "DBL"

[node name="Value" type="Label" parent="UpgradePanel/BG/GunLine_DBL"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_DBL" type="Button" parent="UpgradePanel/BG/GunLine_DBL"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="GunLine_TPL" type="Control" parent="UpgradePanel/BG"]
margin_left = 346.857
margin_top = 200.602
margin_right = 386.857
margin_bottom = 240.602
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/GunLine_TPL"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "TPL"

[node name="Value" type="Label" parent="UpgradePanel/BG/GunLine_TPL"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_TPL" type="Button" parent="UpgradePanel/BG/GunLine_TPL"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="BoomLine_DMG" type="Control" parent="UpgradePanel/BG"]
margin_left = 348.786
margin_top = 287.991
margin_right = 388.786
margin_bottom = 327.991
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/BoomLine_DMG"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "DMG"

[node name="Value" type="Label" parent="UpgradePanel/BG/BoomLine_DMG"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_DMG" type="Button" parent="UpgradePanel/BG/BoomLine_DMG"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="BoomLine_RNG" type="Control" parent="UpgradePanel/BG"]
margin_left = 349.268
margin_top = 332.924
margin_right = 389.268
margin_bottom = 372.924
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UpgradePanel/BG/BoomLine_RNG"]
margin_left = -50.5108
margin_right = -10.5108
margin_bottom = 14.0
text = "RNG"

[node name="Value" type="Label" parent="UpgradePanel/BG/BoomLine_RNG"]
margin_left = -7.85722
margin_top = -1.12246
margin_right = 32.1428
margin_bottom = 12.8775
text = "15"

[node name="Button_RNG" type="Button" parent="UpgradePanel/BG/BoomLine_RNG"]
margin_left = 49.0
margin_top = -3.0
margin_right = 89.0
margin_bottom = 17.0
text = "+"

[node name="Exp" type="Label" parent="UpgradePanel/BG"]
margin_left = 50.584
margin_top = 53.3431
margin_right = 134.584
margin_bottom = 73.3431
text = "EXP:1000"

[node name="CostExp" type="Label" parent="UpgradePanel/BG"]
margin_left = 50.584
margin_top = 78.4735
margin_right = 177.584
margin_bottom = 98.4735
text = "Cost Exp:2000"

[node name="PlayerLevel" type="Label" parent="UpgradePanel/BG"]
margin_left = 32.106
margin_top = 11.3243
margin_right = 167.106
margin_bottom = 31.3243
text = "Player Level:20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeSwitch" type="Button" parent="."]
margin_left = 818.941
margin_top = 31.0
margin_right = 858.941
margin_bottom = 70.0
theme = ExtResource( 5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleResult" type="AcceptDialog" parent="."]
margin_left = 262.963
margin_top = 128.145
margin_right = 970.963
margin_bottom = 484.145
popup_exclusive = true
window_title = "Battle Result"
[connection signal="body_entered" from="BoxActiveZone" to="." method="_on_BoxActiveZone_body_entered"]
[connection signal="pressed" from="HUD/Battle" to="." method="_on_Battle_pressed"]
[connection signal="pressed" from="HUD/ReqSupply" to="." method="_on_ReqSupply_pressed"]
[connection signal="pressed" from="HUD/ReqBox" to="." method="_on_ReqBox_pressed"]
[connection signal="pressed" from="HUD/EatAnt" to="." method="_on_EatAnt_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/AttrLine_HP/Button_HP" to="." method="_on_Button_HP_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/AttrLine_ATK/Button_ATK" to="." method="_on_Button_ATK_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/AttrLine_SPD/Button_SPD" to="." method="_on_Button_SPD_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/AttrLine_SKL/Button_SKL" to="." method="_on_Button_SKL_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/GunLine_THR/Button_THR" to="." method="_on_Button_THR_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/GunLine_DBL/Button_DBL" to="." method="_on_Button_DBL_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/GunLine_TPL/Button_TPL" to="." method="_on_Button_TPL_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/BoomLine_DMG/Button_DMG" to="." method="_on_Button_DMG_pressed"]
[connection signal="pressed" from="UpgradePanel/BG/BoomLine_RNG/Button_RNG" to="." method="_on_Button_RNG_pressed"]
[connection signal="pressed" from="UpgradeSwitch" to="." method="_on_UpgradeSwitch_pressed"]
